Bug 130247 - Focus still is on previously selected message even if the quick search filter hides all message
Summary: Focus still is on previously selected message even if the quick search filter...
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: message list (other bugs)
Version First Reported In: unspecified
Platform: Debian testing Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: junior-jobs
: 231165 (view as bug list)
Depends on:
Blocks:
 
Reported: 2006-07-04 14:24 UTC by Stefan Borggraefe
Modified: 2010-12-26 15:41 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stefan Borggraefe 2006-07-04 14:24:09 UTC
Version:           1.9.3 (using KDE KDE 3.5.3)
Installed from:    Debian testing/unstable Packages
OS:                Linux

KMail has the same small bug as KGpg (see bug 130241). This works as expected with the quick search of Akregator, KNode and Kopete.

Steps to reproduce: 
 
1. select a message
2. enter something like "asdfasdf" into the filter input field so that no message matches that search phrase and the message list is empty 
3. click on the message list 
4. press enter 
 
Expected results: 
Nothing happens, because no message is visibly selected. 
 
Actual results: 
The message selected in step 1 is opened/displayed.
Comment 1 Martin Koller 2009-08-28 00:10:41 UTC
Still reproducible with KDE 4.3
Comment 2 Björn Ruberg 2010-03-19 15:58:10 UTC
*** Bug 231165 has been marked as a duplicate of this bug. ***
Comment 3 Thomas McGuire 2010-12-26 15:41:38 UTC
commit bf6b3458e747a52be8e4daf12d07c744c499ab96
branch master
Author: George Metaxas <gmetal31@gmail.com>
Date:   Sun Dec 26 15:35:51 2010 +0100

    Clear the selection when the filter hides the current message.
    
    Thanks to George Metaxas for the patch!
    
    BUG: 130247
    REVIEW: 6126