Clear the selection when the filter hides the current message.

Thanks to George Metaxas for the patch!

BUG: 130247
REVIEW: 6126